# urlsparkle

./: .env.example  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  LICENSE.txt  README.md  SECURITY.md  compose.yaml  pyrightconfig.json  redocly.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: urlsparkle_ci.yml
.zed/: settings.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  models.py  schemas.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 28b834a9fcbc_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: healthz.py  readyz.py  shorten.py  update.py
backend/app/api/routes/shortcode/: _.py  stats.py
backend/app/core/: config.py  responses.py
backend/tests/: conftest.py  test_utils.py
backend/tests/api/routes/: test_health.py  test_redirect.py  test_shorten.py  test_stats.py  test_update.py
